fix: CORS allowedOrigins를 환경변수로 주입하도록 변경 (#22)
- CORS_ALLOWED_ORIGINS 환경변수로 프로덕션 origin 설정 가능
- 기본값: localhost:3000, frontend:3000 (로컬 개발용)
- Ops 배포 검증 R3(CORS Critical) 대응

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>